# iso3166

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
.devcontainer/: devcontainer.json  post-attach.sh  post-start.sh
.github/workflows/: ci.yml  codeql.yml  release-plz.yml
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs  lukes.rs  m49.csv
parsers/: CHANGELOG.md  Cargo.toml  README.md
parsers/src/: lib.rs  lukes.rs  m49.rs
parsers/src/m49/: test.rs
static/: CHANGELOG.md  Cargo.toml  README.md
static/src/: lib.rs  serde_.rs
