[workspace]
resolver = "2"
members = ["parsers"]
exclude = [".cache"]

[workspace.dependencies]
csv = "1"
serde = { version = "1", default-features = false, features = ["derive"] }

[workspace.lints.clippy]
missing_safety_doc = "forbid"

[workspace.lints.rust]
missing_debug_implementations = "forbid"
missing_docs = "forbid"
unreachable_pub = "forbid"
rust_2018_idioms = "warn"
unsafe_code = "forbid"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

[workspace.package]
authors = ["James Cape <jamescape777@pm.me>"]
edition = "2024"
homepage = "https://github.com/jcape/iso3166"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/iso3166"
rust-version = "1.87.0"
version = "0.1.0"

[profile.release]
lto = true
