[workspace]
resolver = "2"
members = ["macros", "parsers", "static"]
exclude = [".cache"]

[workspace.dependencies]
csv = "1"
iso3166-macros = { path = "./macros", version = "0.1" }
iso3166-parsers = { path = "./parsers", version = "0.1" }
iso3166-static = { path = "./static", version = "0.1" }
serde = { version = "1", default-features = false, features = ["derive"] }

[workspace.lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"
unreachable_pub = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"

[workspace.package]
authors = ["James Cape <jamescape777@pm.me>"]
edition = "2024"
homepage = "https://github.com/jcape/iso3166"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jcape/iso3166"
rust-version = "1.87.0"
version = "0.1.1"

[profile.release]
lto = true
