[package]
name = "iso3166-parsers"
description = "Parsers for ISO 3166 data"
readme = "README.md"
categories = ["finance", "localization", "parser-implementations"]
keywords = ["iso3166"]
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["std"] }

[dev-dependencies]
csv.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
