[package]
name = "iso3166-static"
description = "Static ISO3166 Data"
readme = "README.md"
categories = [
  "data-structures",
  "finance",
  "internationalization",
  "no-std",
  "no-std::no-alloc",
]
keywords = ["iso3166", "m49"]
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
iso3166-macros.workspace = true

[lints]
workspace = true
